--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,24 @@
 {
-  "manifest_version": 2,
-
-  "name": "No Ads Please",
-  "description": "Tu veux regarder hot-dog pour un champion sans pubs ? Viens. On est biens.",
-  "version": "1.0",
-
-	"permissions": [
-    "activeTab"
-  ],
-  "background": {
-    "scripts": ["background.js"],
-    "persistent": false
-  },
-  "browser_action": {
-    "default_title": "Make this page red"
-  }
+    "name": "Chrome Extension Template",
+    "version": "1.0",
+    "manifest_version": 2,
+    
+    "description": "Chrome extension description written here.",
+    "icons": {
+        "19": "images/icon_19.png",
+        "38": "images/icon_38.png",
+        "128": "images/icon_128.png"
+    },
+    
+    "browser_action": {
+        "default_title": "browser_action: default_title",
+        "default_icon": {
+            "19": "images/icon_19.png",
+            "38": "images/icon_38.png"
+        },
+        "default_popup": "html/main.html"
+    },
+    
+    "options_page": "html/options.html",
+    "homepage_url": "http://yourdomainhere.com/"
 }
