--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "Chrome Extension Template",
+    "name": "No Ads Please",
     "version": "1.0",
     "manifest_version": 2,
     
-    "description": "Chrome extension description written here.",
+    "description": "Tu veux regarder hot-dog pour un champion sans pubs ? Viens. On est bien.",
     "icons": {
         "19": "images/icon_19.png",
         "38": "images/icon_38.png",
