--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
             "https://www.tf1.fr/*",
             "http://www.tf1.fr/*"
           ],
-          "js": ["js/jquery-1.9.1.min.js", "js/content.js"],
+          "js": ["js/content.js"],
           "css": ["css/content.css"]
         }
       ],
