--- a/manifest.json
+++ b/manifest.json
@@ -32,5 +32,5 @@
     },
     
     "options_page": "html/options.html",
-    "homepage_url": "http://yourdomainhere.com/"
+    "homepage_url": "https://github.com/JeSuisUnCaillou/NoAdsPlease"
 }
